# discord-bot

./: .env.example  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  main.py  pyproject.toml  settings.py  utils.py
db/: redis.py
services/: telegram.py
